--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is my high school project, a website that generates a weekly gym plan/scheme for those who either want to start to gym or for those who have several years of gym experience but are stuck in the same loop of exercises.",
   "main": "app.js",
   "dependencies": {
+    "bootstrap-icons": "^1.3.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "mongoose": "^5.11.8"
